--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: LaTeX compilation
-      uses: dante-ev/latex-action@v0.2.0
+      - name: Set up Git repository
+        uses: actions/checkout@v1
+      - name: LaTeX compilation
+        uses: dante-ev/latex-action@v0.2.0
+        with:
+          root_file: main.tex
