--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,14 @@ jobs:
         uses: dante-ev/latex-action@v0.2.0
         with:
           root_file: main.tex
+      - name: Archive Logs
+        uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: logs
+          path: main.log
+      - name: Archive PDF
+        uses: actions/upload-artifact@v1
+        with:
+          name: pdf
+          path: main.pdf
