more dry, less duplication
Read infopage up front, use providecommand to provide warnings,
use more conditional includes,
improved possibility to fast build one chapter with IncludeOnly file, which is read when available

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 *.cb
 *.cb2
 .*.lb
-
+*~
+out
 ## Intermediate documents:
 *.dvi
 *.xdv
@@ -242,3 +243,5 @@ TSWLatexianTemp*
 *.spl
 /main.pdf
 /example.pdf
+# do not put your personal signature in any repo
+authenticity_signature.png
